--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
     "express": "^4.18.2",
+    "lottie-web": "^5.13.0",
+    "ngx-lottie": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
