--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^20.3.14",
     "@angular/compiler": "^20.3.14",
     "@angular/core": "^20.3.14",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.3.14",
     "@angular/platform-browser": "^20.3.14",
     "@angular/platform-browser-dynamic": "^20.3.14",
@@ -23,6 +24,7 @@
     "@angular/ssr": "^20.3.12",
     "bootstrap": "^5.3.8",
     "express": "^4.18.2",
+    "firebase": "^11.10.0",
     "lottie-web": "^5.13.0",
     "ngx-lottie": "^11.0.2",
     "rxjs": "~7.8.0",
@@ -35,7 +37,7 @@
     "@angular/compiler-cli": "^20.3.14",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^24.10.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
